--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
-    <div class="wrapper"></div>
+    <main>
+        <div class="container">
+            <h1>
+                FizzBuzzDOM
+            </h1>
+            <div class="wrapper"></div>
+        </div>
+    </main>
 
     <!-- Javascript -->
     <script src="./js/script.js"></script>
